testsuite/poke.pkl/units-diag-3.pk
/* { dg-do compile } */

var n = 10;
unit x = 2 + n; /* { dg-error "constant" } */
